fix: header layout bug (#8)

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,15 +5,15 @@
 @layer base {
   :root,
   html[data-theme='light'] {
-    --color-fill: 251, 254, 251;
+    --color-fill: 240, 240, 240;
     --color-text-base: 40, 39, 40;
-    --color-accent: 0, 108, 172;
+    --color-accent: 0, 66, 154;
     --color-card: 230, 230, 230;
     --color-card-muted: 205, 205, 205;
     --color-border: 236, 233, 233;
   }
   html[data-theme='dark'] {
-    --color-fill: 33, 39, 55;
+    --color-fill: 23, 29, 45;
     --color-text-base: 234, 237, 243;
     --color-accent: 255, 107, 1;
     --color-card: 52, 63, 96;
@@ -26,7 +26,7 @@
   }
   section,
   footer {
-    @apply mx-auto max-w-3xl px-4;
+    @apply mx-auto max-w-4xl px-4;
   }
   a {
     @apply outline-2 outline-offset-1 outline-skin-fill
